# north-agent

./: .env.example  .gitignore  AGENT.md  README.md  pyproject.toml  readme.md
app/: __init__.py  agent.py  checkpointer.py  cli.py  client.py  config.py  resources.py  runtime.py  state.py
app/agents/: __init__.py
app/agents/middlewares/: __init__.py  loop_detection.py
app/middlewares/: __init__.py  clarification.py  loop_detection.py  tool_error.py
app/outputs/: __init__.py  writer.py
app/runtime/: __init__.py  worker.py
app/runtime/stream_bridge/: __init__.py  memory.py
app/skills/: __init__.py  loader.py
app/threads/: __init__.py  paths.py  uploads.py
app/tools/: _runtime.py  registry.py
app/tools/builtin/: __init__.py  clarification.py  get_time.py  list_files.py  present_files.py  read_file.py  search.py  (+1 more)
docs/: LITE_ARCHITECTURE.md  LITE_EVOLUTION_PLAN.md  README.md  TODO.md  TODO_ARCHIVE.md
docs/architecture/: README.md  code-execution-boundary.md  overview.md  public-api.md  runtime-boundaries.md  runtime-observability.md  target-structure.md  thread-persistence.md
docs/plan/: README.md  principles.md  roadmap.md
skills/: README.md
skills/file-analysis/: SKILL.md
skills/research/: SKILL.md
skills/writer/: SKILL.md
tests/: test_agent.py  test_app.py  test_checkpointer.py  test_cli.py  test_config.py  test_file_analysis_smoke.py  test_middlewares.py  test_public_api.py  test_redis_stream_bridge.py  test_resources.py  test_runtime.py  test_runtime_events.py  test_skills.py  test_summarization.py  test_threads.py  test_tools.py
(+1 files in other folders)
