[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "deerflow-lite"
version = "0.1.0"
description = "A minimal DeerFlow-style app and agent factory demo."
readme = "readme.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.0.0,<2.0.0",
    "langchain-openai>=1.0.0,<2.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
]

[project.scripts]
deerflow-lite = "app.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
