[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "north-agent"
version = "0.1.0"
description = "A reusable Python agent runtime for tools, skills, events, and durable context."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "north",
    "langchain>=1.0.0,<2.0.0",
    "langchain-openai>=1.0.0,<2.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
]

[project.scripts]
north-agent = "app.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv.sources]
north = { path = "packages/harness" }

[tool.pytest.ini_options]
testpaths = ["tests"]
